# passmanager

./: .gitignore  INTERVIEW_PREP.md  LICENSE  README.md  checker.py  config.py  generator.py  passcheck.py  passmanager.py  pyproject.toml  requirements.txt  scorer.py
core/: checker.py  generator.py
passmanager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_checker.py  test_generator.py  test_ml_scorer.py  test_scorer.py
training/: build_dataset.py  features.py  train.py
training/data/: passwords.csv
