[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "passcheck"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pyperclip",
]

[tool.setuptools]
packages = ["training"]
py-modules = ["passcheck", "checker", "generator", "scorer", "config"]

[project.scripts]
passcheck = "passcheck:main"
